--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -1,6 +1,6 @@
 library identifier: 'jenkins-shared@master', retriever: modernSCM(
  [$class: 'GitSCMSource',
-  remote: 'https://github.com/arashsari/Jenkins-Docker-Django',
+  remote: 'https://github.com/arashsari/Jenkins-Docker-Django.git',
  ])
 
 pipeline {
