--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
  parameters {
   gitParameter name: 'RELEASE_TAG',
    type: 'PT_TAG',
-   defaultValue: 'master'
+   defaultValue: 'main'
  }
 
  stages {
@@ -74,5 +74,5 @@ def getBuildName() {
 }
 
 def isMaster() {
- "${params.RELEASE_TAG}" == "master"
+ "${params.RELEASE_TAG}" == "main"
 }
