--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
         - app_data:/docker_app
         - jenkins_data:/var/jenkins_home
       env_file:
-        - ../.env.dev
+        - ./.env.dev
       depends_on:
         - db
 
