--- a/docker-compose.jenkins.yml
+++ b/docker-compose.jenkins.yml
@@ -5,13 +5,15 @@ services:
         ports:
             - '8080:8080'
             - '50000:50000'
-        image: localhost:5000/jenkins
-    jenkins-slave:
-        container_name: jenkins-slave
+        build: jenkins/master/
+        # image: localhost:5000/jenkins
+    jenkins-build-agent:
+        container_name: jenkins-build-agent
         restart: always
         environment:
             - 'JENKINS_URL=http://jenkins:8080'
-        image: localhost:5000/jenkins-slave
+        # image: localhost:5000/build-agent
+        build: jenkins/build-agent/
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
         depends_on:
