mast not working

--- a/jenkins/build-agent/Dockerfile
+++ b/jenkins/build-agent/Dockerfile
@@ -1,27 +1,37 @@
-   
-FROM ubuntu:18.04
+FROM jenkins/ssh-agent:jdk11
+# FROM ubuntu:18.04
 
 # Install Docker CLI
-RUN apt-get update && apt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release
+RUN apt-get update && apt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release software-properties-common
 
-RUN apt-get remove docker docker-engine docker.io containerd runc 
-RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-RUN apt-get update && apt-get -y install docker
-# RUN apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
-# RUN echo "deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable" > /etc/apt/sources.list.d/docker.list
-# RUN apt-get update && apt-get install -y docker-ce --allow-unauthenticated
-
+# RUN apt-get remove docker docker-engine docker.io containerd runc 
 # RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
-# # RUN add-apt-repository \
-# #    "deb [arch=amd64] https://download.docker.com/linux/ubuntu; echo "$ID") \
-# #    $(lsb_release -cs) \
-# #    stable"  
-# RUN apt-get install -y docker-ce --allow-unauthenticated
+# RUN apt-key fingerprint 0EBFCD88
+# RUN add-apt-repository \
+#    "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
+#    $(lsb_release -cs) \
+#    stable"
+# RUN apt-get update && apt-get -y install docker-ce
 
-RUN apt-get update && apt-get install -y openjdk-8-jre curl python python-pip git
-# RUN pip install jenkins-webapi requests jenkinsapi jenkins
-# RUN easy_install jenkins-webapi
-RUN pip install jenkins-webapi 
+
+USER root
+
+RUN apt-get update && \
+    apt-get -y install \
+    apt-transport-https \
+    ca-certificates \
+    gnupg2 \
+    software-properties-common
+RUN curl -fsSL https://download.docker.com/linux/$(. /etc/os-release; echo "$ID")/gpg | apt-key add -
+RUN add-apt-repository \
+   "deb [arch=amd64] https://download.docker.com/linux/$(. /etc/os-release; echo "$ID") \
+   $(lsb_release -cs) \
+   stable" 
+RUN apt-get update && apt-get -y install docker-ce
+
+
+# RUN apt-get update && apt-get install -y openjdk-8-jre curl python python-pip git
+# RUN pip install jenkins-webapi 
 
 # Get docker-compose in the agent container
 
@@ -29,11 +39,11 @@ RUN curl -L https://github.com/docker/compose/releases/download/1.21.2/docker-co
 RUN mkdir -p /home/jenkins
 RUN mkdir -p /var/lib/jenkins
 
-ADD slave.py /var/lib/jenkins/slave.py
+# ADD slave.py /var/lib/jenkins/slave.py
 
 WORKDIR /home/jenkins
 
-ENV JENKINS_URL "http://jenkins"
+ENV JENKINS_URL "http://jenkins:8080"
 ENV JENKINS_SLAVE_ADDRESS ""
 ENV JENKINS_USER "admin"
 ENV JENKINS_PASS "admin"
@@ -44,6 +54,8 @@ ENV SLAVE_LABELS "docker"
 ENV SLAVE_WORING_DIR ""
 ENV CLEAN_WORKING_DIR "true"
 
+# ENV JAVA_ARGS "-Dhudson.security.csrf.DefaultCrumbIssuer.EXCLUDE_SESSION_ID=true"
 
-CMD [ "python", "-u", "/var/lib/jenkins/slave.py" ]
+
+# CMD [ "python", "-u", "/var/lib/jenkins/slave.py" ]
 
